add styling and description.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Letter Search highlighter</title>
+    <meta charset="UTF-8" />
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
+  <body class="h-screen bg-gray-800 text-white font-mono flex flex-col items-center">
+    <h1 class="w-full text-center font-bold text-2xl border-b py-4">
+			Letter Search highlighter
+		</h1>
+    <div
+      id="app"
+      class=" sm:w-screen lg:w-1/2 flex flex-col items-center mt-3 p-4"
+    >
+      <input
+        type="text"
+        id="search_input"
+        placeholder="search"
+        class="text-gray-800 px-2 py-2 rounded mb-3"
+      />
+      <p id="text_holder" class="text-justify font-sans">
+        Moment.js has been successfully used in millions projects, and we are
+        happy to have contributed to making date and time better on the web. As
+        of September 2020, Moment gets over 12 million downloads per week!
+        However, Moment was built for the previous era of the JavaScript
+        ecosystem. The modern web looks much different these days. Moment has
+        evolved somewhat over the years, but it has essentially the same design
+        as it did when it was created in 2011. Given how many projects depend on
+        it, we choose to prioritize stability over new features.
+      </p>
+    </div>
 
-<body>
-	<div id="app">
-		<input type="text" id="search_input" placeholder="search" />
-		<!-- <button id="btn">search</button> -->
-		<div id="text_holder">
-			Moment.js has been successfully used in millions 
-			projects, and we are happy to have contributed to
-			making date and time better on the web. As of 
-			September 2020, Moment gets over 12 million 
-			downloads per week! However, Moment was built for
-				the previous era of the JavaScript ecosystem. 
-				The modern web looks much different these days. 
-				Moment has evolved somewhat over the years, 
-				but it has essentially the same design as it 
-				did when it was created in 2011. Given how many 
-				projects depend on it, we choose to prioritize 
-				stability over new features.
-		</div>
-	</div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+    <script src="src/index.js"></script>
+  </body>
 </html>
